Fix scrollbars in map select menus

--- a/css/dewrito.css
+++ b/css/dewrito.css
@@ -239,7 +239,7 @@ audio {display: none;}
     width: 260px;
     display: none;
     height: 500px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: visible;
     -webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,1) 80%,rgba(0,0,0,0) 100%);
     opacity: 0;
